@@ -34,6 +34,7 @@
 - [#774] New feature. Matching Parentheses.
 - [#779] Add more roll paper size templates.
 - [#783] Flipping control.
+- [#790] Generate unique name for each detail.
 
 # Version 0.5.1
 - [#683] Tool Seam allowance's dialog is off screen on small resolutions.
